// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`config.devServer boolean 1`] = `
Object {
  "entry": "./app/assets/application.js",
  "mode": "development",
  "output": Object {
    "path": "/Users/joelmoss/dev/frails/test/dummy/public/assets",
    "publicPath": "/assets/",
  },
}
`;

exports[`config.devServer object 1`] = `
Object {
  "devServer": Object {
    "contentBase": "/Users/joelmoss/dev/frails/test/dummy/public/assets",
    "hot": true,
    "port": 8080,
    "public": "localhost:8080",
    "publicPath": "/assets/",
    "watchOptions": Object {
      "ignored": "**/node_modules/**",
      "poll": true,
    },
  },
  "entry": "./app/assets/application.js",
  "mode": "development",
  "output": Object {
    "path": "/Users/joelmoss/dev/frails/test/dummy/public/assets",
    "publicPath": "/assets/",
  },
}
`;
